Added a p tag to index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
   <title>This is my awesome website</title>
   <h1> Welcome to my Awesome Website</h1>
+  <p> Hello, My Love for Jesus is Awesome</p>
 </html>
